# LISP-ATD-2022

./: 1D_CNN_20Dim.ipynb  1D_CNN_20Dim_Full_Pred.ipynb  ENV.yml  ENV_osx_arm64.yml  README.md  environment.yml  models.py  my_mod.py  pyproject.toml  setup.cfg
1D CNN/: 1D_CNN_20Dim.ipynb  Demo.ipynb  LISP_Sprint2_Submission.csv  models.py  my_mod.py  readme.txt
1D CNN/.ipynb_checkpoints/: Demo-checkpoint.ipynb
1D_CNN/: 1D_CNN_20Dim.ipynb  Demo.ipynb
2D_CNN/data/: data_loader.py
2D_CNN/driver/: atd_CNN.py
2D_CNN/model/: CNN_2D.py
ARIMA/: arima.ipynb  arimaForecaster.py  arimaForecaster_2.py  my_mod.py  readme.txt
CNN/: ATD_CNN_Demo.ipynb  CNN_Forecaster_Wrapper.py
CNN/.ipynb_checkpoints/: ATD_CNN_Demo-checkpoint.ipynb
CNN/data/: data_loader.py
CNN/driver/: atd_CNN.py
CNN/model/: CNN_1D.py
CoAtNet/: ATD_CoAtNet_Demo.ipynb  CoAtNet_Forecaster_wrapper.py  CoAtNet_Test.ipynb  readme.txt
CoAtNet/.ipynb_checkpoints/: CoAtNet_Test-checkpoint.ipynb
CoAtNet/atd_CoAtNet/: atd_CoAtNet.py
CoAtNet/data/: data_loader.py
CoAtNet2/data/: data_loader.py
CoAtNet2/model/: CoAtNet.py
DL+Stats/CNN+Stats/: atd_wrapper.py
DL+Stats/CNN+Stats_Res/: ATD_CNN_VAR_RES_Demo.ipynb  atd_wrapper.py
Dynamic Time Warping/: readme.txt
Dynamic Time Warping/.ipynb_checkpoints/: DTW_Similarity_Alignment-checkpoint.ipynb
ETRT_CNN/: ETRT_CNN_Demo.ipynb  ETRT_Forecaster_Wrapper.py
ETRT_CNN/driver/: atd_ETRT_CNN.py
ETRT_CNN/model/: ETRT_CNN.py
Event_Time_CNN/: ET_CNN_Wrapper.py
Event_Time_CNN/model/: ET_CNN.py
Hybrid_ET/: multi_forecaster.py
Hybrid_ETRT/: multi_forecaster.py
Hybrid_ETRT/model/: CNN_Transformer.py
Hybrid_ETRT_Weighted_Machine3/: var_forecaster.py
Hybrid_ETRT_Weighted_Machine4/: multi_forecaster.py
Informer/: Informer_Model_Test.ipynb  atd_informer_V2_Demo.ipynb  atd_informer_demo.ipynb  atd_wrapper.py  atd_wrapper_V2.py  test_region.csv
Informer-Transformer/: readme.txt
Informer/.ipynb_checkpoints/: Informer_Model_Test-checkpoint.ipynb  atd_informer_V2_Demo-checkpoint.ipynb  atd_informer_demo-checkpoint.ipynb
Informer/atd_informer/: atd_informer.py  atd_informer_V2.py  exp_basic.py
Informer/data/: data_loader.py
Informer/models/: embed.py  model.py
Informer/utils/: timefeatures.py  tools.py
Mark_Exp/: experiment.ipynb
Mark_Exp/.ipynb_checkpoints/: experiment-checkpoint.ipynb
Mark_Exp/CoAtNet/: CoAtNet_Forecaster_Wrapper.py
Mark_Exp/Hybrid_ET/: multi_forecaster.py
Transformer/: sandbox.py
Transformer+CNN/: CNN_Forecaster_Wrapper.py  CNN_Transformer_Forecaster_Wrapper.py
VAR_model/: var_forecaster.py
XGBoost/: ATD_Var_Xgb_Demo.ipynb  Exp.ipynb  atd_wrapper.py  readme.txt
setup/: environment.yml  pyproject.toml  setup.cfg
(+93 files in other folders)
