[metadata]
name = LISP-ATD-2022
description = Machine learning models for time series forecasting.
version = attr: LISP-ATD-2022.__version__
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Griffin Heyrich
author_email = gheyrich@bu.edu

[options]
zip_safe = False
package_dir =
    = src
packages = find:
platforms = any
include_package_data = True
install_requires =
    gluonts==0.9.4  # pytorchts 0.6.0 fails to find gluonts.torch.modules.distribution_output
    orjson
    pandas>=1.1.3,<1.4  # statsmodel raises FutureWarning: pandas.Int64Index is deprecated
    pytorchts
    torch
    tqdm>=4.63.0
python_requires = >=3.7,<3.10

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8<4  # https://github.com/tholo/pytest-flake8/issues/81
    hypothesis
    ipykernel
    ipywidgets
    isort
    mypy
    nb-clean
    nbqa
    pandas-stubs<=1.2.0.62
    pydocstyle
    pytest<7  # Avoid "Flake8Item is an Item subclass and should not be a collector..."
    pytest-flake8
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
all =
    %(dev)s
    %(docs)s

[tool:pytest]
junit_family = xunit2
addopts = -v --durations=0 --doctest-modules
filterwarnings =
    ignore::DeprecationWarning
testpaths =
	tests
    src/arlpsu_ml

[flake8]
max-line-length = 88
ignore = E203,E225,W503
exclude =
    .git
    __pycache__
    .ipynb_checkpoints
    docs/source/conf.py
    build
    dist

[pydocstyle]
convention = numpy
add_ignore = D105

[mypy]
allow_redefinition = True
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
show_error_codes = True
exclude = (?x)(
    ^build/.*
  )
